--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "Codesi"
+name = "codesi-lang"
 version = "0.0.1"
 description = "First of its Kind Programming Language"
 readme = "README.md"
